# terminal-jail

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.coding-hermes/: tasks.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.gitreins/: config.yaml
.memory-bank/: tick-2026-07-20.json
.vfs/: manifest.yaml
.vfs/graph/: edges.jsonl
docs/: COMPATIBILITY.md  dependency-audit.md  lkml-monitoring.md  pentest-plan.md  pr-sla.md  quarterly-review.md  supply-chain.md  threat-model.md
docs/adr/: 0001-architecture-decisions.md
plugin/: __init__.py  conftest.py  plugin.yaml  pytest.ini  test_install.py  test_integration.py  test_interruptor.py  test_interruptor_integration.py  test_metrics_export.py  test_plugin.py  test_seccomp.py  test_standalone_cli.py
plugin/terminal_jail/: __init__.py  interruptor_bridge.py  plugin.py  seccomp.py
plugin/terminal_jail/interruptor/: __init__.py  allowlist.py  blocklist.py  config.py  decider.py  matcher.py  output.py  parser.py  rules.py  sandbox.py  types.py
plugin/terminal_jail/rules/: 00-builtins.yaml
scripts/: benchmark-interruptor.py  kernel-watchdog.sh  metrics-export.py  unshare-tracker.sh
specs/: cli.md  integration.md  interruptor.md  plugin.md  systemd.md
standalone/: seccomp-loader.py  terminal-jail
systemd/: 90-terminal-jail-hardening.conf
